# my-simple-malloc

./: CMakeLists.txt
.cache/clangd/index/: allocator.c.E6328E804A8B5382.idx  allocator.h.FC6203B05D5924DB.idx  base.c.D67AD7E6A9A0DCEB.idx  base.h.C83AB6E1143FE48F.idx  header.c.DB4DF804F83A695F.idx  header.h.7550639B8CF52919.idx  rand.c.2DD5ECF655EAD292.idx  rand.h.955C39C1D9475757.idx  rb_tree.c.27FA3640DE45B0C6.idx  rb_tree.h.A06B6F7871FE159F.idx  test.c.21E0752F0F3A18AD.idx  test.h.2B3618DED9C9C66A.idx
include/: allocator.h  base.h  header.h  rand.h  rb_tree.h  test.h
src/: allocator.c  base.c  header.c  rb_tree.c
test/: rand.c  test.c
